--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- Initializer -->
   <script>
     Flatdoc.run({
-  fetcher: Flatdoc.file('Readme.md')
+  fetcher: Flatdoc.github('PrakharSrivastav/apiDoc', 'Readme.md')
 });
   </script>
 </head>
@@ -44,15 +44,15 @@
 
   <div class='header'>
     <div class='left'>
-      <h1>Your Project</h1>
+      <h1>Bedrebest API</h1>
       <ul>
-        <li><a href='https://github.com/USER/REPO'>View on GitHub</a></li>
+        <li><a href='https://github.com/PrakharSrivastav/apiDoc'>View on GitHub</a></li>
         <li><a href='https://github.com/USER/REPO/issues'>Issues</a></li>
       </ul>
     </div>
     <div class='right'>
       <!-- GitHub buttons: see http://ghbtns.com -->
-      <iframe src="http://ghbtns.com/github-btn.html?user=USER&amp;repo=REPO&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
+      <iframe src="http://ghbtns.com/github-btn.html?user=PrakharSrivastav&amp;repo=apiDoc&amp;type=watch&amp;count=true" allowtransparency="true" frameborder="0" scrolling="0" width="110" height="20"></iframe>
     </div>
   </div>
 
